// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Policy Sets Form Field renders error 1`] = `
<div>
  <div
    class="bp3-form-group bp3-intent-danger formGroup"
  >
    <label
      class="bp3-label"
    >
      common.policiesSets.policyset
       
      <span
        class="bp3-text-muted"
      />
    </label>
    <div
      class="bp3-form-content"
    >
      <button
        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main addModifyButton Button--without-shadow"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          common.policiesSets.addOrModifyPolicySet
        </span>
      </button>
      <div
        class="bp3-form-helper-text"
      >
        <div
          class="FormError--errorDiv"
          data-name="dummy"
        >
          <span
            class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
            data-icon="circle-cross"
          >
            <svg
              height="12"
              viewBox="0 0 13 13"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="FormError--error"
          >
            Failed to validate
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test Policy Sets Form Field snapshot test and open close modal 1`] = `
<div>
  <div
    class="bp3-form-group formGroup"
  >
    <label
      class="bp3-label"
    >
      common.policiesSets.policyset
       
      <span
        class="bp3-text-muted"
      />
    </label>
    <div
      class="bp3-form-content"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-flex-start StyledProps--flex-alignItems-center StyledProps--margin-bottom-small"
      >
        <div
          class="Layout--horizontal StyledProps--main policySetHolder StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-center StyledProps--padding-right-medium StyledProps--padding-left-medium StyledProps--margin-right-small"
          style="width: 500px; height: 36px;"
        >
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-red800"
            style="--text-line-clamp: 1;"
          />
        </div>
        <span
          class="bp3-icon StyledProps--main"
          data-icon="main-trash"
        >
          <svg
            height="16"
            viewBox="0 0 16 20"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
              fill="currentColor"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
              fill="currentColor"
              fill-rule="evenodd"
              opacity="0.3"
            />
          </svg>
        </span>
      </div>
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-flex-start StyledProps--flex-alignItems-center StyledProps--margin-bottom-small"
      >
        <div
          class="Layout--horizontal StyledProps--main policySetHolder StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-center StyledProps--padding-right-medium StyledProps--padding-left-medium StyledProps--margin-right-small"
          style="width: 500px; height: 36px;"
        >
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-red800"
            style="--text-line-clamp: 1;"
          />
        </div>
        <span
          class="bp3-icon StyledProps--main"
          data-icon="main-trash"
        >
          <svg
            height="16"
            viewBox="0 0 16 20"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
              fill="currentColor"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
              fill="currentColor"
              fill-rule="evenodd"
              opacity="0.3"
            />
          </svg>
        </span>
      </div>
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-flex-start StyledProps--flex-alignItems-center StyledProps--margin-bottom-small"
      >
        <div
          class="Layout--horizontal StyledProps--main policySetHolder StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-center StyledProps--padding-right-medium StyledProps--padding-left-medium StyledProps--margin-right-small"
          style="width: 500px; height: 36px;"
        >
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--color StyledProps--color-red800"
            style="--text-line-clamp: 1;"
          />
        </div>
        <span
          class="bp3-icon StyledProps--main"
          data-icon="main-trash"
        >
          <svg
            height="16"
            viewBox="0 0 16 20"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
              fill="currentColor"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
              fill="currentColor"
              fill-rule="evenodd"
              opacity="0.3"
            />
          </svg>
        </span>
      </div>
      <button
        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main addModifyButton Button--without-shadow"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          common.policiesSets.addOrModifyPolicySet
        </span>
      </button>
    </div>
  </div>
</div>
`;
